Fixed spacing on contact page.

--- a/styles/ContactPage.module.css
+++ b/styles/ContactPage.module.css
@@ -1,10 +1,10 @@
 .contact {
-  margin: 10rem 0;
+  margin: 6rem 0;
 }
 
 .contact h1 {
   text-align: center;
-  margin: 4rem 0;
+  margin-bottom: 2rem;
   text-transform: capitalize;
 }
 
